--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "engine":{
+    "node":"v12.19.0",
+    "npm":"6.14.8"
+  },
   "directories": {
     "lib": "lib"
   },
